--- a/main.css
+++ b/main.css
@@ -106,10 +106,10 @@ span.icon {
     position: fixed;
     z-index: 55;
     text-align: center;
+    width: 100%;
     margin: auto;
-    left: 4.5%;
+    padding-bottom: 10px;
 }
-
 
 /* Global Button Styles */
 
@@ -160,29 +160,6 @@ a.animated-button:link:hover:after,
 a.animated-button:visited:hover:after {
     height: 450%;
 }
-
-a.animated-button:link,
-a.animated-button:visited {
-    position: relative;
-    display: block;
-    margin: 10px auto 0;
-    padding: 14px 15px;
-    color: #fff;
-    font-size: 14px;
-    border-radius: 0;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    letter-spacing: .08em;
-    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    transition: all 1s ease;
-}
-
 
 /* Victoria Buttons */
 
